# list-ary

./: .gitignore  README.md  build.bat  config.py  dashboard.db  hub.py  kill_port.bat  listary_tools.spec  pyproject.toml  requirements.txt  servers.json  utils.py
TODO/: Windsurf上报体系升级方案.md  analysis.md  code-review.md  优化方案与新想法.md
dashboard/: models.py  server.py  session_manager.py
dashboard/data/: dashboard.db
dashboard/routers/: ports.py  sessions.py  settings.py  ssh.py  windsurf.py
dashboard/static/: jetbrains-mono.css
dashboard/templates/: index.html  panel.html
modules/: autostart.py  ide_profiles.py  kill_port.py  sftp_pool.py  ssh_connect.py  ssh_manager.py  webhook.py  windsurf_open.py  windsurf_setup.py
report/: report.py  report_config.json
ssh_keys/: default_key  default_key.pub  qunxing-erp_key  qunxing-erp_key.pub
